<resources>
    <string name="app_name">Foosball Ranking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="dashboard">Dashboard</string>
    <string name="results">Results</string>
    <string name="ranking">Ranking</string>
    <string name="versus">Versus</string>
    <string name="add_result">Add result</string>
    <string name="select_participants">Select participants</string>
    <string name="add_members">Add member</string>
    <string name="select_formation">Select a formation</string>
    <string name="colon">:</string>
    <string name="zero">0</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="make_selection">Make selection</string>
    <string name="add">Add</string>
    <string name="enter_participant_name">Enter new participant name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="no_participants_have_been_added_yet">No participants have been added yet</string>
    <string name="change">Change</string>
    <string name="last_5_results">Last 5 results</string>
    <string name="show_more"><![CDATA[Show more >]]></string>
    <string name="top_5_ranking">Top 5 ranking</string>
    <string name="empty_result">No results have been added yet, please add a new result by pressing + button below</string>

    <string-array name="formation">
        <item>1 x 1</item>
        <item>1 x 2</item>
        <item>2 x 2</item>
    </string-array>

</resources>
