<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/dashboard"/>
        <item
            android:id="@+id/nav_results"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/result"/>
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/ic_assessment_black_24dp"
            android:title="@string/ranking"/>
        <item
            android:id="@+id/nav_versus"
            android:icon="@drawable/ic_swap_horiz_black_24dp"
            android:title="@string/versus"/>
    </group>
</menu>
