<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/dashboardMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/dashboardLastResultsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_5_results"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dashboardLastResultsMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/show_more"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/dashboardLastResultsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dashboardLastResultsTitle"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/dashboardLastRankingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dashboardLastResultsList"
            android:text="@string/top_5_ranking"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dashboardLastRankingMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/dashboardLastResultsList"
            android:text="@string/show_more"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/dashboardTopRankingList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dashboardLastRankingTitle"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/dashboardEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/empty_result"/>
</FrameLayout>