<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_formation"
        android:textSize="18sp"
        android:focusable="true"
        android:layout_toStartOf="@+id/addResultFormation"
        android:focusableInTouchMode="true"/>

    <Spinner
        android:id="@+id/addResultFormation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:entries="@array/formation"/>

    <TextView
        android:id="@+id/addResultTeam1Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addResultFormation"
        android:text="@string/team_1"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/addResultFormation"
        android:text="@string/team_2"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/addResultTeam1Group1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addResultTeam1Label"
        android:layout_toStartOf="@+id/addResultScoreDivider"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/addResultTeam1Participant1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:visibility="gone"
            tools:text="Jimm/Todd"/>

        <Button
            android:id="@+id/addResultTeam1Button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_members"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addResultTeam1Group2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addResultTeam1Group1"
        android:layout_toStartOf="@+id/addResultScoreDivider"
        android:visibility="invisible"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/addResultTeam1Participant2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            tools:text="Jimm/Todd"/>

        <Button
            android:id="@+id/addResultTeam1Button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_members"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addResultTeam2Group1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/addResultTeam1Label"
        android:layout_toEndOf="@+id/addResultScoreDivider"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/addResultTeam2Participant1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            tools:text="Max/Phil"/>

        <Button
            android:id="@+id/addResultTeam2Button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_members"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addResultTeam2Group2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"
        android:layout_below="@id/addResultTeam2Group1"
        android:layout_toEndOf="@+id/addResultScoreDivider"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/addResultTeam2Participant2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:visibility="gone"
            tools:text="Max/Phil"/>

        <Button
            android:id="@+id/addResultTeam2Button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_members"/>

    </LinearLayout>

    <TextView
        android:id="@+id/addResultScoreDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addResultTeam1Group2"
        android:layout_centerHorizontal="true"
        android:text="@string/colon"/>

    <EditText
        android:id="@+id/addResultTeam1Score"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/addResultScoreDivider"
        android:layout_toStartOf="@id/addResultScoreDivider"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="2"
        android:text="@string/zero"/>

    <EditText
        android:id="@+id/addResultTeam2Score"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/addResultScoreDivider"
        android:layout_toEndOf="@id/addResultScoreDivider"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="2"
        android:text="@string/zero"/>

    <Button
        android:id="@+id/addResultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addResultTeam1Score"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:text="@string/add_result"/>

</RelativeLayout>